<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalDataActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/contact_data_personal_info"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginTop="32dp"
        android:layout_marginRight="@dimen/margins"
        android:hint="@string/contact_data_input_telephone_number"
        app:boxCornerRadiusBottomEnd="@dimen/corners"
        app:boxCornerRadiusBottomStart="@dimen/corners"
        app:boxCornerRadiusTopEnd="@dimen/corners"
        app:boxCornerRadiusTopStart="@dimen/corners"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/primary_app_color"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:startIconDrawable="@drawable/ic_call_24"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_Telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="25"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTwo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/margins"
        android:hint="@string/contact_data_input_email"
        app:boxCornerRadiusBottomEnd="@dimen/corners"
        app:boxCornerRadiusBottomStart="@dimen/corners"
        app:boxCornerRadiusTopEnd="@dimen/corners"
        app:boxCornerRadiusTopStart="@dimen/corners"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/primary_app_color"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:startIconDrawable="@drawable/ic_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutThree"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/margins"
        android:hint="@string/contact_data_autocomplete_country"
        app:boxCornerRadiusBottomEnd="@dimen/corners"
        app:boxCornerRadiusBottomStart="@dimen/corners"
        app:boxCornerRadiusTopEnd="@dimen/corners"
        app:boxCornerRadiusTopStart="@dimen/corners"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/primary_app_color"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTwo"
        app:startIconDrawable="@drawable/ic_country_24">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoComplete_Pais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutFour"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/margins"
        android:hint="@string/contact_data_autocomplete_city"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutThree"
        app:startIconDrawable="@drawable/ic_city_24">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoComplete_Ciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutFive"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/margins"
        android:hint="@string/contact_data_input_address"
        app:boxCornerRadiusBottomEnd="@dimen/corners"
        app:boxCornerRadiusBottomStart="@dimen/corners"
        app:boxCornerRadiusTopEnd="@dimen/corners"
        app:boxCornerRadiusTopStart="@dimen/corners"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFour"
        app:startIconDrawable="@drawable/ic_address_24">

        <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/editText_Ciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="16dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFive"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/margins"
        android:orientation="horizontal"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/button_Return"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="64dp"
            android:text="@string/goBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFive" />

        <Button
            android:id="@+id/button_Next"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFive" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>