<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalDataActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/personal_data_personal_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginTop="32dp"
        android:layout_marginRight="@dimen/margins"
        android:hint="@string/personal_data_input_name"
        app:boxCornerRadiusBottomEnd="@dimen/corners"
        app:boxCornerRadiusBottomStart="@dimen/corners"
        app:boxCornerRadiusTopEnd="@dimen/corners"
        app:boxCornerRadiusTopStart="@dimen/corners"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/primary_app_color"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:startIconDrawable="@drawable/ic_person_24"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="25"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginTop="32dp"
        android:layout_marginRight="@dimen/margins"
        android:hint="@string/personal_data_input_name"
        app:boxCornerRadiusBottomEnd="@dimen/corners"
        app:boxCornerRadiusBottomStart="@dimen/corners"
        app:boxCornerRadiusTopEnd="@dimen/corners"
        app:boxCornerRadiusTopStart="@dimen/corners"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/primary_app_color"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:startIconDrawable="@drawable/ic_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="30"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="16dp" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>